src/test/deca/context/valid/Objet/DeclClass.deca
// Description:
//    test de déclaration de classe
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int i ;
    float x = 2.5;
}

